# aws-kms-crypt

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: nodejs_ci.yaml  python_ci.yaml
nodejs/: README.md  index.js  package-lock.json  package.json
nodejs/lib/: crypto.js
nodejs/test/: test_crypto.js  test_index.js
python/: LICENSE  LICENSE.txt  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
python/kmscrypt/: __init__.py  __main__.py  crypto.py  helpers.py  pkcs7.py
python/tests/: test_crypto.py  test_pkcs7.py
rust/: Cargo.toml
rust/examples/: decrypt.rs  encrypt.rs
rust/src/: lib.rs
shell/: aws-kms-crypt.sh
