[tool.poetry]
name = "aws-kms-crypt"
version = "3.0.0"
description = "Utility for encrypting and decrypting secrets with the AWS KMS service"
authors = ["Sami Jaktholm <sjakthol@outlook.com>"]
license = "MIT"
packages = [
  {include = "kmscrypt"},
  {include = "py.typed"}
]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cryptography = ">=3.4,<43.0"
boto3 = "^1.26.13"

[tool.poetry.dev-dependencies]
bandit = "^1.7.8"
black = "^24.3.0"
boto3-stubs = {extras = ["kms"], version = "^1.34.74"}
mypy = "^1.9.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0"
moto = {extras = ["kms"], version = "^5.0.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
