[tool.poetry]
name = "aws-kms-crypt"
version = "3.0.0"
description = "Utility for encrypting and decrypting secrets with the AWS KMS service"
authors = ["Sami Jaktholm <sjakthol@outlook.com>"]
license = "MIT"
packages = [
  {include = "kmscrypt"},
  {include = "py.typed"}
]
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cryptography = ">=3.4,<43.0"
boto3 = "^1.26.13"

[tool.poetry.dev-dependencies]
bandit = "^1.7.9"
black = "^24.4.2"
boto3-stubs = {extras = ["kms"], version = "^1.34.131"}
mypy = "^1.10.0"
pylint = "^3.2.3"
pytest = "^8.2.2"
pytest-cov = "^5.0"
moto = {extras = ["kms"], version = "^5.0.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
