[package]
name = "aws_kms_crypt"
version = "0.1.0"
authors = ["Sami Jaktholm <sjakthol@outlook.com>"]

[dependencies]
base64 = "0.7.0"
base64-serde = "0.2.0"
error-chain = "0.11.0"
hex-serde = "0.1.0"
openssl = "0.9.23"
rusoto_core = "0.31.0"
rusoto_kms = "0.31.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
